; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/simplelink/extr_cc_pal.c_spi_Close.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/simplelink/extr_cc_pal.c_spi_Close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LSPI_BASE = common dso_local global i64 0, align 8
@g_SpiFd = common dso_local global i64 0, align 8
@PRCM_LSPI = common dso_local global i32 0, align 4
@PRCM_RUN_MODE_CLK = common dso_local global i32 0, align 4
@PRCM_SLP_MODE_CLK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spi_Close(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i64, i64* @LSPI_BASE, align 8
  store i64 %4, i64* %3, align 8
  store i64 0, i64* @g_SpiFd, align 8
  %5 = load i64, i64* @LSPI_BASE, align 8
  %6 = call i32 @MAP_SPICSDisable(i64 %5)
  %7 = load i64, i64* %3, align 8
  %8 = call i32 @MAP_SPIDisable(i64 %7)
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @MAP_SPIReset(i64 %9)
  %11 = load i32, i32* @PRCM_LSPI, align 4
  %12 = load i32, i32* @PRCM_RUN_MODE_CLK, align 4
  %13 = load i32, i32* @PRCM_SLP_MODE_CLK, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @MAP_PRCMPeripheralClkDisable(i32 %11, i32 %14)
  ret i32 0
}

declare dso_local i32 @MAP_SPICSDisable(i64) #1

declare dso_local i32 @MAP_SPIDisable(i64) #1

declare dso_local i32 @MAP_SPIReset(i64) #1

declare dso_local i32 @MAP_PRCMPeripheralClkDisable(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
